<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             >

    <TextView
            style="@style/TaskDetailsLabel"
            android:text="@string/task_id_label" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_width="0dp"/>

    <TextView
            android:id="@+id/taskId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="123"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/title_label"
            style="@style/TaskDetailsLabel"
            android:id="@+id/textView2"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/taskId" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_width="0dp"/>

    <TextView
            android:id="@+id/taskTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Do the chores" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <TextView
            style="@style/TaskDetailsLabel"
            android:text="@string/task_creation_date" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleView" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/taskCreationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2020-12-30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="8dp"/>

    <CheckBox
            android:id="@+id/taskCompletionCheckbox"
            style="@style/TaskDetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:drawablePadding="10dp"
            android:text="@string/task_completion_state"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/notes"/>

    <TextView
            style="@style/TaskDetailsLabel"
            android:labelFor="@+id/notes"
            android:text="@string/notesLabel" app:layout_constraintTop_toBottomOf="@+id/taskCreationDate"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView5"/>

    <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notesHint"
            android:imeOptions="flagNoExtractUi"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="4"
            tools:text="@tools:sample/lorem" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>

    <TextView
            style="@style/TaskDetailsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/taskDetailsAssignedLabel"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/taskCompletionCheckbox"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/assigneeUserName" android:layout_marginEnd="2dp"/>

    <TextView
            android:id="@+id/assigneeUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/unassigned"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginStart="2dp"/>

    <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/assignee"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_spinner_dropdown_item"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>