<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            style="@style/TaskDetailsLabel"
            android:text="@string/task_id_label" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_width="0dp"/>

    <TextView
            android:id="@+id/taskId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="123"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/title_label"
            style="@style/TaskDetailsLabel" android:id="@+id/textView2"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/taskId" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_width="0dp"/>

    <TextView
            android:id="@+id/taskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Do the chores" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <CheckBox
            android:id="@+id/taskCompletionCheckbox"
            style="@style/TaskDetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:drawablePadding="10dp"
            android:text="@string/task_completion_state"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

</android.support.constraint.ConstraintLayout>